# marionette

./: .eslintrc  .gitignore  .solcover.js  .solhint.json  README.md  cspell.json  hardhat.config.ts  package.json  slither.config.json  tslint.json
.github/: CODEOWNERS
.github/workflows/: issue_check.yml  publish.yml  test.yml
.openzeppelin/: predeployed.json
contracts/: Marionette.sol
contracts/interfaces/: IMarionette.sol
contracts/test/: ImaMock.sol  MarionetteOld.sol  MultiSend.sol  SafeMock.sol  Target.sol
dictionaries/: domain-terms.txt  libraries.txt  names.txt  skale-terms.txt  solidity.txt
migrations/: deploy.ts  upgrade.ts
migrations/tools/: verification.ts  version.ts
predeployed/: .gitignore  MANIFEST.in  README.md  setup.cfg
predeployed/scripts/: build_package.sh  generate_abi.py  prepare_artifacts.py  requirements.txt
predeployed/src/marionette_predeployed/: __init__.py  address.py  marionette_generator.py  upgradeable_marionette_generator.py
predeployed/test/: requirements.txt  test_upgradeable_marionette_generator.py
predeployed/test/tools/: base_genesis.json  test_predeployed.py
scripts/: deployImaMock.ts  requirements.txt  test_deploy.sh  test_upgrade.sh
test/: Marionette.ts
